[tool.poetry]
name = "kb"
version = "0.1.0"
description = ""
authors = ["Jiajie Chen <c@jia.je>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^9.1.6"
pillow = "^9.5.0"
cairosvg = "^2.7.0"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
