[tool.poetry]
name = "kb"
version = "0.1.0"
description = ""
authors = ["Jiajie Chen <c@jia.je>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^9.1.21"
pillow = "^11.3.0"
cairosvg = "^2.7.0"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"
mkdocs-static-i18n = "^1.0"
mkdocs-glightbox = "^0.4.0"
mkdocs-wavedrom-plugin = {git = "https://github.com/jiegec/mkdocs-wavedrom-plugin.git"}
mkdocs-rss-plugin = "^1.6.0"
jieba = "^0.42.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
